# hyperbolicfitdll

./: LICENSE  Project1.cpp  README.md  hyperbolicfitdll.cpp  hyperbolicfitdll.h
binaries/windows/: SetupFPI.msi  readme.txt
binaries/x64dll/: APTHyperbolicfitdll.exp  APTHyperbolicfitdll.lib
binaries/x86dll/: APTHyperbolicfitdll.exp  APTHyperbolicfitdll.iobj  APTHyperbolicfitdll.ipdb  APTHyperbolicfitdll.lib
sources/: CMakeLists.txt  FM.cpp  HFDM.cpp  Readme_HFDM.txt  focusinterpolation.cpp  focusinterpolation.h  hyperbolicfitdll.cpp  hyperbolicfitdll.h  readme.txt  readme_FM.txt  readme_Focusinterpolation.txt  readme_focuspointinterpolation.txt  testapplication.cpp
